# rchol

./: .gitignore  README.md
c++/: CMakeLists.txt  Makefile  RCholConfig.cmake.in  ex_laplace.cpp  ex_parallel.cpp  successful_env_vars.txt
c++/rchol_lap/: rchol_lap.cpp
c++/util/: pcg.cpp  pcg.hpp  util.cpp
